Added Experience Page

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Front-end developer | Victoria Martynenko</title>
+    <title>Full Stack Developer | Victoria Martynenko</title>
     <meta
       name="description"
       content="Homepage Portfolio of Front-end developer Victoria Martynenko"
