Changed page description

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Full Stack Developer | Victoria Martynenko</title>
     <meta
       name="description"
-      content="Homepage Portfolio of Front-end developer Victoria Martynenko"
+      content="Portfolio of Full Stack Developer Victoria Martynenko"
     />
 
     <!-- Google Fonts -->
