--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Full Stack Developer | Victoria Martynenko</title>
+    <title>Front-end Web Developer | Victoria Martynenko</title>
     <meta
       name="description"
-      content="Portfolio of Full Stack Developer Victoria Martynenko"
+      content="Portfolio of Front-end Web Developer Victoria Martynenko"
     />
 
     <!-- Google Fonts -->
