Added icon logo in title bar, changed links to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Portfolio of Front-end Web Developer Victoria Martynenko"
     />
+    <link rel="icon" href="./logo.svg" type="image/x-icon" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
